@@ -21,6 +21,7 @@ class Example
   autoload :Session, 'Example/Session'
   autoload :Submit, 'Example/Submit'
   autoload :Subpage, 'Example/Subpage'
+  autoload :Table, 'Example/Table'
   autoload :Text, 'Example/Text'
   autoload :Textarea, 'Example/Textarea'
   autoload :Value, 'Example/Value'
