@@ -1,0 +1,1 @@
+<%= value :char %>: <%= value :code %>
