@@ -1,0 +1,2 @@
+<%= checkbox :checked, :id => value(:id) %>
+<label for="<%= value :id %>"><%= value :text %></label>
