@@ -1,0 +1,1 @@
+<em><%= value :text %></em>
